# arknights_recruit_calc

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/proj/ksks/arknights/arknights_calc/: AndroidUtil.kt  ArknightsUtil.kt  ChannelManager.kt  FloatingAmiya.kt  FloatingWidgetGestureHandler.kt  ImageUtil.kt  MainActivity.kt  OperatorChartLayout.kt  ScreenCaptureService.kt  Tr.kt
android/app/src/main/kotlin/proj/ksks/arknights/arknights_calc/bridge/: ChannelManager.kt  (+1 more)
android/app/src/main/res/values-en/: strings.xml
android/app/src/main/res/values-ko/: strings.xml
assets/messages/: default.yml  ko_KR.yml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: ad_helper.dart  arknights.dart  capture.dart  config.dart  floating_view.dart  main.dart  native_channel.dart  settings_dialog.dart  translation.dart
lib/src/rust/: .gitignore  frb_generated.dart
rust/: Cargo.toml
rust/src/: .gitignore  lib.rs
rust/src/api/: list_tag.rs  map_operator.rs  simple.rs  types.rs
rust/src/core/: list_tag.rs  map_operator.rs  mod.rs  types.rs
rust/test/: main.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_arknights_calc.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_arknights_calc.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
(+9 files in other folders)
