[package]
name = "rust_lib_arknights_calc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.3.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.13"
zip = "0.5"

[[bin]]
name = "test_arknights_calc"
path = "test/main.rs"

