[package]
name = "rust_lib_arknights_calc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.3.0"
reqwest = { version = "0.12.7",  features = ["blocking", "json"] }
scraper = "0.20"
zip = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3"

[[bin]]
name = "test_arknights_calc"
path = "test/main.rs"

